--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
   </div>
 
   <section class="portfolio">
-    <h1>Our a Portfolio</h1>
+    <h1>Our Portfolio</h1>
     <div class="portfolio-container">
       <a href="https://joncodea.github.io/PloughWebsite/" target="_blank" class="portfolio-item" data-title="Project 1">
         <img src="PortfolioImage1.png" alt="Project 1">
